# CREAM

./: .readthedocs.yaml  Cargo.toml  LICENSE  LICENSE.LGPL  README.md  pyproject.toml
.github/workflows/: ci.yml  python-ci.yml
cream-cli/: Cargo.toml
cream-cli/src/: main.rs
docs/: api.md  architecture.md  backends.md  conf.py  design.md  index.md  known_limits.md  pbc.md  potentials.md  python_api.md  requirements.txt  roadmap.md
examples/: cream_quickcheck.py  cu_md_simulation.py  list_adapters.rs
examples/eam_alloy_verification/: README.md  VERIFICATION_RESULTS.md  compare_against_reference.py  eam_alloy_reference.py  run_all_backend_matrix.py
examples/eam_alloy_verification/potentials/: README.md
examples/eam_alloy_verification/results/: summary.json
examples/eam_alloy_verification/results/Cu01/: cpu_allpairs.json  cpu_celllist.json  gpu_allpairs.json  gpu_celllist.json
examples/eam_alloy_verification/results/Mishin-Ni-Al-2009/: cpu_allpairs.json
python/cream/: __init__.py  _cream.pyi  calculator.py
src/: cell_list.rs  cpu_engine.rs  engine.rs  error.rs  lib.rs  neighbor_list.rs  python.rs  reference.rs  wasm.rs
src/potential/: eam.rs  mod.rs  spline.rs
src/shaders/: cell_pass0a_assign.wgsl  cell_pass0b_sort.wgsl  cell_pass0c_range.wgsl  cell_pass0d_reorder.wgsl  common.wgsl  eam_pass1_cellist.wgsl  eam_pass1_density.wgsl  eam_pass1_neighlist.wgsl  eam_pass2_cellist.wgsl  eam_pass2_forces.wgsl  eam_pass2_neighlist.wgsl  eam_pass3_energy.wgsl  eam_pass3_reduce.wgsl  verlet_integrate.wgsl
tests/: cell_list.rs  common.rs  gpu.rs  parser.rs  stress.rs  test_real_potential.rs  test_rphi_bugfix.rs
tests_python/: conftest.py  test_cell_list_regression.py  test_pyo3.py  test_stress.py
